Create vddk upload endpoint for UI to use to upload vddk file
