# pkg/vpwned/api/proto/v1/service/api_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.5.1
-// - protoc             v6.32.0
+// - protoc             v5.29.3
 // source: sdk/proto/v1/api.proto
 
 // editor setting.
@@ -976,6 +976,7 @@ var BMProvider_ServiceDesc = grpc.ServiceDesc{
 const (
 	VailbreakProxy_ValidateOpenstackIp_FullMethodName   = "/api.VailbreakProxy/ValidateOpenstackIp"
 	VailbreakProxy_RevalidateCredentials_FullMethodName = "/api.VailbreakProxy/RevalidateCredentials"
+	VailbreakProxy_UploadVDDK_FullMethodName            = "/api.VailbreakProxy/UploadVDDK"
 )
 
 // VailbreakProxyClient is the client API for VailbreakProxy service.
@@ -984,6 +985,7 @@ const (
 type VailbreakProxyClient interface {
 	ValidateOpenstackIp(ctx context.Context, in *ValidateOpenstackIpRequest, opts ...grpc.CallOption) (*ValidateOpenstackIpResponse, error)
 	RevalidateCredentials(ctx context.Context, in *RevalidateCredentialsRequest, opts ...grpc.CallOption) (*RevalidateCredentialsResponse, error)
+	UploadVDDK(ctx context.Context, opts ...grpc.CallOption) (grpc.ClientStreamingClient[UploadVDDKRequest, UploadVDDKResponse], error)
 }
 
 type vailbreakProxyClient struct {
@@ -1014,12 +1016,26 @@ func (c *vailbreakProxyClient) RevalidateCredentials(ctx context.Context, in *Re
 	return out, nil
 }
 
+func (c *vailbreakProxyClient) UploadVDDK(ctx context.Context, opts ...grpc.CallOption) (grpc.ClientStreamingClient[UploadVDDKRequest, UploadVDDKResponse], error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	stream, err := c.cc.NewStream(ctx, &VailbreakProxy_ServiceDesc.Streams[0], VailbreakProxy_UploadVDDK_FullMethodName, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	x := &grpc.GenericClientStream[UploadVDDKRequest, UploadVDDKResponse]{ClientStream: stream}
+	return x, nil
+}
+
+// This type alias is provided for backwards compatibility with existing code that references the prior non-generic stream type by name.
+type VailbreakProxy_UploadVDDKClient = grpc.ClientStreamingClient[UploadVDDKRequest, UploadVDDKResponse]
+
 // VailbreakProxyServer is the server API for VailbreakProxy service.
 // All implementations must embed UnimplementedVailbreakProxyServer
 // for forward compatibility.
 type VailbreakProxyServer interface {
 	ValidateOpenstackIp(context.Context, *ValidateOpenstackIpRequest) (*ValidateOpenstackIpResponse, error)
 	RevalidateCredentials(context.Context, *RevalidateCredentialsRequest) (*RevalidateCredentialsResponse, error)
+	UploadVDDK(grpc.ClientStreamingServer[UploadVDDKRequest, UploadVDDKResponse]) error
 	mustEmbedUnimplementedVailbreakProxyServer()
 }
 
@@ -1035,6 +1051,9 @@ func (UnimplementedVailbreakProxyServer) ValidateOpenstackIp(context.Context, *V
 }
 func (UnimplementedVailbreakProxyServer) RevalidateCredentials(context.Context, *RevalidateCredentialsRequest) (*RevalidateCredentialsResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method RevalidateCredentials not implemented")
+}
+func (UnimplementedVailbreakProxyServer) UploadVDDK(grpc.ClientStreamingServer[UploadVDDKRequest, UploadVDDKResponse]) error {
+	return status.Errorf(codes.Unimplemented, "method UploadVDDK not implemented")
 }
 func (UnimplementedVailbreakProxyServer) mustEmbedUnimplementedVailbreakProxyServer() {}
 func (UnimplementedVailbreakProxyServer) testEmbeddedByValue()                        {}
@@ -1093,6 +1112,13 @@ func _VailbreakProxy_RevalidateCredentials_Handler(srv interface{}, ctx context.
 	return interceptor(ctx, in, info, handler)
 }
 
+func _VailbreakProxy_UploadVDDK_Handler(srv interface{}, stream grpc.ServerStream) error {
+	return srv.(VailbreakProxyServer).UploadVDDK(&grpc.GenericServerStream[UploadVDDKRequest, UploadVDDKResponse]{ServerStream: stream})
+}
+
+// This type alias is provided for backwards compatibility with existing code that references the prior non-generic stream type by name.
+type VailbreakProxy_UploadVDDKServer = grpc.ClientStreamingServer[UploadVDDKRequest, UploadVDDKResponse]
+
 // VailbreakProxy_ServiceDesc is the grpc.ServiceDesc for VailbreakProxy service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -1109,6 +1135,12 @@ var VailbreakProxy_ServiceDesc = grpc.ServiceDesc{
 			Handler:    _VailbreakProxy_RevalidateCredentials_Handler,
 		},
 	},
-	Streams:  []grpc.StreamDesc{},
+	Streams: []grpc.StreamDesc{
+		{
+			StreamName:    "UploadVDDK",
+			Handler:       _VailbreakProxy_UploadVDDK_Handler,
+			ClientStreams: true,
+		},
+	},
 	Metadata: "sdk/proto/v1/api.proto",
 }
